fix: no line breaks on sort arrows

--- a/assets/ui/FuzzPanelMain.css
+++ b/assets/ui/FuzzPanelMain.css
@@ -191,8 +191,14 @@ tr.classErrorExpectedOutputRow td div {
 
 /* Sorting */
 .columnSortDesc::after {
-  content: " ▼";
+  content: "▼";
+  display: inline-block;
+  padding-left: 0.25ch;
+  position: absolute;
 }
 .columnSortAsc::after {
-  content: " ▲";
+  content: "▲";
+  display: inline-block;
+  padding-left: 0.25ch;
+  position: absolute;
 }
